<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    app:cardElevator="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="Posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/txt_name"
                    android:textColor="@android:color/black"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:text="@string/userid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/txt_name"
                    android:textColor="@android:color/black"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/txt_name"
                    android:textColor="@android:color/black"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/txt_name"
                    android:textColor="@android:color/black"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:text="@string/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateIds" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>